<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ImageView
        android:layout_width="163dp"
        android:layout_height="170dp"
        android:background="@drawable/pattern_top"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/pattern_top"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo_splash"
        android:contentDescription="@string/logo"/>

    <ImageView
        android:layout_width="217dp"
        android:layout_height="228dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pattern_bottom"
        android:contentDescription="@string/pattern_bottom"/>

</RelativeLayout>