<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="94dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/pattern_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/logo_white"
        app:layout_constraintBottom_toTopOf="@+id/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pattern_top" />

    <ImageView
        android:id="@+id/shape"
        android:layout_width="0dp"
        android:layout_height="567dp"
        android:layout_marginTop="218dp"
        android:src="@drawable/ic_shape"
        app:layout_constraintTop_toBottomOf="@id/logo_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="566dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_edittext"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_edittext"
            android:hint="@string/pass"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confpass_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_edittext"
            android:hint="@string/conf_pass"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/or" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_sign_in_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="14dp"
            android:text="@string/google_sign_in"
            android:textSize="16sp"
            app:strokeColor="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/no_account" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
