<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/fort_rotterdam"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/bg_back"
        android:src="@drawable/back_icon"
        android:contentDescription="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/place_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/place_fort"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail" />

    <ImageView
        android:id="@+id/iv_loc"
        android:layout_width="20dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/location"
        app:layout_constraintTop_toBottomOf="@id/place_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/loc_sulsel"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/iv_loc"
        app:layout_constraintStart_toEndOf="@id/iv_loc" />

    <ImageView
        android:id="@+id/iv_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rate"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/location"
        app:layout_constraintEnd_toStartOf="@id/rating" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/rating"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/desc_text" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_loc"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/maps"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/gmaps"
            android:contentDescription="@string/location" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/fav"
            app:fabSize="normal"
            app:srcCompat="@drawable/fav_red" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
