<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red">

    <ImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="1dp"
        android:background="@drawable/pattern_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/logo_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="477dp"
        android:layout_marginTop="308dp"
        android:src="@drawable/ic_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:layout_marginTop="320dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_edit_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/ic_edittext"
            android:hint="@string/pass"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="16dp"
            android:text="@string/sign_in"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/or" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/red"
            android:minHeight="48dp"
            android:padding="16dp"
            android:text="@string/google_sign_in"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/no_account" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
