<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back"/>

    <TextView
        android:id="@+id/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:text="@string/filter"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/back" />

    <TextView
        android:id="@+id/kategori_wisata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_category"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_centerHorizontal="true"
        tools:listitem="@layout/item_category"
        app:layout_constraintTop_toBottomOf="@id/kategori_wisata"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/location"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/rv_item_category"
        app:layout_constraintStart_toStartOf="@id/kategori_wisata" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_item_location"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_centerHorizontal="true"
        tools:listitem="@layout/item_category"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetAll"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/red"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:onClick="@{ () -> viewModel.resetFilters() }"
            android:text="@string/reset" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@drawable/ic_edittext" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
