<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logo_red"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="12dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/search"
        android:contentDescription="@string/search"
        app:layout_constraintStart_toEndOf="@id/home_logo"
        app:layout_constraintTop_toTopOf="@id/home_logo" />

    <ImageButton
        android:id="@+id/filter_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/filter"
        android:contentDescription="@string/filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toEndOf="@id/search_button"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_logo">

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/fort_rotterdam" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/slider_tab"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        android:contentDescription="@string/slider"
        app:layout_constraintTop_toBottomOf="@id/cv_slider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recommendation"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/slider_tab"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        tools:itemCount="12"
        tools:listitem="@layout/item_places"
        app:layout_constraintTop_toBottomOf="@id/tv_rec"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/red"
        app:menu="@menu/bottom_nav"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
